# SalesforcePy

./: README.md  pyproject.toml
docs/: contribute.rst  faq.rst  get_started.rst
src/salesforcepy/: __init__.py  chatter.py  commons.py  device_flow.py  jobs.py  sfdc.py  wave.py
src/salesforcepy/einstein/: __init__.py
src/salesforcepy/einstein/llm/: __init__.py  embeddings.py  prompt.py
tests/: test_api_version.py  test_client.py  test_login.py  test_query_more.py  testutil.py
