[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "salesforcepy"
version = "2.2.0"
description = "An absurdly simple package for making Salesforce REST API calls"
authors = [
    {name = "Aaron Caffrey", email = "acaffrey@salesforce.com"},
    {name = "Jose Garcia Ponce", email = "jgarciaponce@salesforce.com"},
    {name = "Colin Cheevers", email = "ccheevers@salesforce.com"},
    {name = "Tania Prince", email = "tania.prince@salesforce.com"},
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
keywords = ["salesforce", "rest", "api", "sfdc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.20.0,<3",
]

[project.urls]
repository = "https://github.com/forcedotcom/SalesforcePy"
homepage = "https://github.com/forcedotcom/SalesforcePy"

[dependency-groups]
dev = [
    "responses>=0.22.0",
    "coverage>=7.3",
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
